Closed Bug 1986444 Opened 9 months ago Closed 9 months ago

Traverse navigate event shouldn't fire unless we switch session history entry

Categories

(Core :: DOM: Navigation, defect)

defect

Tracking

()

RESOLVED FIXED
144 Branch
Tracking Status
firefox144 --- fixed

People

(Reporter: farre, Assigned: farre)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.
Assignee: nobody → afarre
Status: NEW → ASSIGNED
Summary: Traverse shouldn't fire unless we switch session history entry → Traverse navigate event shouldn't fire unless we switch session history entry
Severity: -- → S3
Status: ASSIGNED → RESOLVED
Closed: 9 months ago
Resolution: --- → FIXED
Target Milestone: --- → 144 Branch
QA Whiteboard: [qa-triage-done-c145/b144]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: