Bug 1986444 - Don't fire navigate event if shentry stays the same. r=jjaschke

Differential Revision: https://phabricator.services.mozilla.com/D263394